cli/tests/testdata/jsr/version_not_found/main.ts
import value from "jsr:@denotest/deps@0.1.4/mod.ts";
console.log(value);
